--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /
                   <p>Or you can look right here to see just how lazy I really am.</p>
                   <br/>
 
-                  <table class="tbl">
+                  <table class="tbl" width="100%%">
                     {%  for post in site.posts %}
                     <tr>
                       <td class="col1">{{ post.date | date: "%Y-%m-%d" }}</td>
