--- a/zlinux/vmparms/vmparms.html
+++ b/zlinux/vmparms/vmparms.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: VM IPL PARM Support
-permalink: /zlinux/vmparms.html
+permalink: /zlinux/vmparms/
 ---
                   <h2>{{page.title}}</h2>
                   <p>This patch adds the ability to supply kernel command line parameters via the PARM parameter of the VM IPL command.&nbsp; It only allows 64 bytes so it may not be appropriate for all command lines.&nbsp; But, I've found that most command lines are fairly short and, at the vary least, can be made generic and supplemented with additional parms from the IPL command. </p>
