Update additional pages

--- a/zvm/vma/vma.html
+++ b/zvm/vma/vma.html
@@ -5,11 +5,15 @@ permalink: /zvm/vma/
 ---
                   <h2>{{page.title}}</h2>
                   <p>VMA is a utility that allows you to list, extract, and/or create VMARC files.&nbsp; It consists of a command line version that should run just about anywhere and a GUI version that should run wherever <a href="http://www.wxwidgets.org/">wxWidgets</a> is supported.</p>
+                  <p>Download v22.204a:</p>
+                  <p>
+                     <a href="/files/vma-20.226a.tar.gz">Source</a>
+                  </p>
                   <p>Download v20.226a: (Catalina compatible)</p>
                   <p>
                      <a href="/files/vma-20.226a.tar.gz">Source</a>,
                      <a href="/files/vmamac-20.226a.dmg">Mac</a>
-
+                  </p>
                   <p>Download v12.081a:</p>
                   <p>
                      <a href="/files/vma-12.081a.tar.gz">Source</a>,
@@ -44,6 +48,18 @@ permalink: /zvm/vma/
                     <tr>
                       <td class="col1">Date</td>
                       <td class="col2">Change</td>
+                    </tr>
+                    <tr>
+                      <td class="col1">2022-07-233</td>
+                      <td class="col2">Added missing command line parameter check to VMA.</td>
+                    </tr>
+                    <tr>
+                      <td class="col1">2020-08-13</td>
+                      <td class="col2">Notarized VMA for Mac Catalina.</td>
+                    </tr>
+                    <tr>
+                      <td class="col1">2020-08-11</td>
+                      <td class="col2">Rebuilt and signed VMA for Mac Catalina.</td>
                     </tr>
                     <tr>
                       <td class="col1">2012-03-21</td>
