Fix google indexing

--- a/asm/hetutl/hetutl.html
+++ b/asm/hetutl/hetutl.html
@@ -6,7 +6,7 @@ permalink: /asm/hetutl/
                   <h2>{{page.title}}</h2>
                   <p>HETUTL is a utility that is run on IBM's OS/390+ operating system to convert physical tapes to disk files in the HET format.&nbsp; These HET files can then be used by the <a href="http://www.hercules-390.org/">Hercules</a> mainframe emulator to simulate the real tape.</p>
                   <p>The program accepts an IBM format tape and converts it to an HET format file. Output compression, input block sizes of up to 65535 bytes, and options to create files compatible with the AWSTAPE format are supported.</p>
-                  <p>It uses the zlib390, bzlib390, zlibLE, and/or bzlibLE libraries that can be found <a href="..">here</a> for its compression routines.</p>
+                  <p>It uses the zlib390, bzlib390, zlibLE, and/or bzlibLE libraries that can be found <a href="../">here</a> for its compression routines.</p>
                   <p>Download:</p>
                   <p><a href="/files/hetutl-02.344.tar.gz">hetutl-02.344.tar.gz</a></p>
                   <p>Change History:</p>
