--- a/esp32/esp32.html
+++ b/esp32/esp32.html
@@ -20,6 +20,9 @@ permalink: /esp32/
                   <p><a href="{{site.githome}}esp32_littleflash/">esp32_littleflash</a></p>
                   <p>LittleFS filesystem for the ESP32</p>
 
+                  <p><a href="{{site.githome}}/esp32_picotts">esp32_picotts</a></p>
+                  <p>PicoTTS for the ESP32</p>
+
                   <p><a href="{{site.githome}}/esp32_redflash">esp32_redflash</a></p>
                   <p>Reliance Edge filesystem for the ESP32</p>
 
