--- a/zlinux/zlinux.html
+++ b/zlinux/zlinux.html
@@ -4,18 +4,18 @@ title: zLinux Projects
 permalink: /zlinux/
 ---
                   <h2>{{page.title}}</h2>
-                  <p><a href="unionfs">Unionfs for SLES</a></p>
+                  <p><a href="unionfs/">Unionfs for SLES</a></p>
                   <p>An unofficial standalone packaging of the <a href="http://unionfs.filesystems.org">Unionfs</a> filesystem for SUSE Linux Enterprise Server.</p>
-                  <p><a href="64bit-diag">64-bit DASD DIAG</a></p>
+                  <p><a href="64bit-diag/">64-bit DASD DIAG</a></p>
                   <p>A kernel patch that allows DASD DIAG to be used in a 64-bit environment.</p>
-                  <p><a href="vipa_helpers">VIPA Helpers</a></p>
+                  <p><a href="vipa_helpers/">VIPA Helpers</a></p>
                   <p>Some simple scripts to manage the failover of 2 QETH devices.</p>
-                  <p><a href="multiboot">Multiple Configuration Boot Support</a></p>
+                  <p><a href="multiboot/">Multiple Configuration Boot Support</a></p>
                   <p>A patch to zipl that adds multiple configurations selectable using a Load Parameter.</p>
-                  <p><a href="vmparms">VM IPL PARM Support</a></p>
+                  <p><a href="vmparms/">VM IPL PARM Support</a></p>
                   <p>A kernel patch that provides support for the VM IPL PARM parameter.</p>
-                  <p><a href="kernelfixes">Kernel Fixes</a></p>
+                  <p><a href="kernelfixes/">Kernel Fixes</a></p>
                   <p>Patches to the kernel source to fix several minor problems.</p>
-                  <p><a href="tcpdump-qeth">tcpdump-qeth Wrapper</a></p>
+                  <p><a href="tcpdump-qeth/">tcpdump-qeth Wrapper</a></p>
                   <p>A patch to the tcpdump-qeth wrapper program from IBM.</p>
                   <br>
