--- a/zvm/zvm.html
+++ b/zvm/zvm.html
@@ -4,14 +4,14 @@ title: z/VM Projects
 permalink: /zvm/
 ---
                   <h2>{{page.title}}</h2>
-                  <p><a href="e2cmd">E2CMD Command Environment</a></p>
+                  <p><a href="e2cmd/">E2CMD Command Environment</a></p>
                   <p>A REXX External Command environment that supplies an interface to managing EXT2 filesystems from CMS.</p>
-                  <p><a href="kaos">KAOS - Kindly Activate Our System</a></p>
+                  <p><a href="kaos/">KAOS - Kindly Activate Our System</a></p>
                   <p>An EXEC that works with IBM's Operations Manager to perform system startup</p>
-                  <p><a href="qdi">QDI Rexx keyword highlighting</a></p>
+                  <p><a href="qdi/">QDI Rexx keyword highlighting</a></p>
                   <p>A small patch that adds highlighting of Rexx keywords to John Hartmann's<a href="http://vm.marist.edu/~pipeline/index.html#QDI">QDI</a> XEDIT macro.</p>
-                  <p><a href="smcli">smcli - z/VM System Management command line utility</a></p>
+                  <p><a href="smcli/">smcli - z/VM System Management command line utility</a></p>
                   <p>A shell script that provides z/VM management wherever bash is available</p>
-                  <p><a href="vma">VMA Utility</a></p>
+                  <p><a href="vma/">VMA Utility</a></p>
                   <p>A cross platform command line and GUI utility that allows you to view/extract VMARC files.</p>
 <br>
